--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "private": true,
   "scripts": {
     "start": "php -S 0.0.0.0:8080",
-    "lint:html": "htmlhint '*.html'",
+    "lint:htmlhint": "htmlhint '*.html'",
     "lint:css": "stylelint 'css/**/*.css'",
     "lint:js": "eslint 'src/js/**/*.js'",
+    "lint:html": "eslint '*.html'",
     "lint:php": "node scripts/php-lint.js",
-    "ci": "npm run lint:html && npm run lint:css && npm run lint:js && npm run lint:php",
+    "ci": "npm run lint:htmlhint && npm run lint:html && npm run lint:css && npm run lint:js && npm run lint:php",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@semantic-release/github": "^9.0.0",
     "@semantic-release/release-notes-generator": "^12.0.0",
     "eslint": "^8.56.0",
+    "eslint-plugin-html": "^7.1.0",
     "htmlhint": "^1.1.4",
     "semantic-release": "^23.0.0",
     "stylelint": "^16.18.0",
