--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,12 +9,6 @@
       "sourceType": "module"
     },
     "rules": {},
-    "plugins": ["html"],
-    "overrides": [
-        {
-          "files": ["*.html"],
-          "processor": "html"
-        }
-    ]
+    "plugins": ["html"]
 }
   
