--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Projeto HTML, CSS, JS e PHP no CodeSandbox",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dotter-Brasil/demo-repository.git"
+  },
   "scripts": {
     "start": "php -S 0.0.0.0:8080",
     "lint:htmlhint": "htmlhint '*.html'",
@@ -18,6 +22,7 @@
     "@semantic-release/commit-analyzer": "^11.0.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.0.0",
+    "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^12.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-html": "^7.1.0",
