--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,23 +5,24 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
   ci:
     name: Testes (HTML, CSS, JS, PHP)
     runs-on: ubuntu-latest
-
     steps:
       - name: Clonar repositório
         uses: actions/checkout@v3
-
       - name: Instalar Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: Instalar dependências
         run: npm install
-
       - name: Executar testes de lint e validação
         run: npm run ci
 
@@ -30,19 +31,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: ci
     if: github.ref == 'refs/heads/main'
-
     steps:
       - uses: actions/checkout@v3
-
       - name: Instalar Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
-
       - name: Instalar dependências
         run: npm install
-
       - name: Rodar semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # usando o secret da organização
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run semantic-release
