--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,19 +30,29 @@ jobs:
         run: mkdir -p relatorios
 
       - name: Lint HTMLHint
-        run: htmlhint '*.html' > relatorios/htmlhint.txt || true
+        run: |
+          htmlhint '*.html' > relatorios/htmlhint.txt 2>&1
+          if [ $? -eq 0 ]; then echo "OK: Nenhum problema encontrado no HTMLHint." >> relatorios/htmlhint.txt; fi
 
       - name: Lint ESLint (HTML)
-        run: eslint '*.html' -f unix > relatorios/eslint-html.txt || true
+        run: |
+          eslint '*.html' -f unix > relatorios/eslint-html.txt 2>&1
+          if [ $? -eq 0 ]; then echo "OK: Nenhum problema encontrado no ESLint (HTML)." >> relatorios/eslint-html.txt; fi
 
       - name: Lint ESLint (JS)
-        run: eslint 'src/js/**/*.js' -f unix > relatorios/eslint-js.txt || true
+        run: |
+          eslint 'src/js/**/*.js' -f unix > relatorios/eslint-js.txt 2>&1
+          if [ $? -eq 0 ]; then echo "OK: Nenhum problema encontrado no ESLint (JS)." >> relatorios/eslint-js.txt; fi
 
       - name: Lint Stylelint
-        run: stylelint 'css/**/*.css' > relatorios/stylelint.txt || true
+        run: |
+          stylelint 'css/**/*.css' > relatorios/stylelint.txt 2>&1
+          if [ $? -eq 0 ]; then echo "OK: Nenhum problema encontrado no Stylelint." >> relatorios/stylelint.txt; fi
 
       - name: Lint PHP
-        run: node scripts/php-lint.js > relatorios/php-lint.txt || true
+        run: |
+          node scripts/php-lint.js > relatorios/php-lint.txt 2>&1
+          if [ $? -eq 0 ]; then echo "OK: Nenhum problema encontrado no PHP Lint." >> relatorios/php-lint.txt; fi
 
       - name: Upload dos relatórios
         uses: actions/upload-artifact@v4
@@ -56,8 +66,7 @@ jobs:
     needs: ci
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: Clonar repositório
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Instalar Node.js
         uses: actions/setup-node@v3
