--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,7 +50,7 @@ jobs:
           name: relatorios-lint
           path: relatorios
 
-  release:scripts
+  release:
     name: Semantic Release
     runs-on: ubuntu-latest
     needs: ci
